--- a/appspec.yml
+++ b/appspec.yml
@@ -4,9 +4,12 @@ files:
   - source: /
     destination: /home/ubuntu/Projects/Lcventures
 hooks:
+  BeforeInstall:
+    - location: permissions.sh
+      timeout: 300
+      runas: root
   AfterInstall:
     - location: deploy.sh
-    - location: permissions.sh
       timeout: 300
       runas: root
   ApplicationStart:
