--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-daum-map": "^1.0.11",
+    "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.9.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
